clipper2c/include/types.h

  typedef struct ClipperClipper64 ClipperClipper64;
  typedef struct ClipperClipperD ClipperClipperD;
  typedef struct ClipperClipperOffset ClipperClipperOffset;
  typedef struct ClipperPath64 ClipperPath64;
  typedef struct ClipperPathD ClipperPathD;
  typedef struct ClipperPaths64 ClipperPaths64;
  typedef struct ClipperPathsD ClipperPathsD;
  typedef struct ClipperPolyTree64 ClipperPolyTree64;
  typedef struct ClipperPolyTreeD ClipperPolyTreeD;
  /** Coordinate pair in floating-point (f64) space. The clipping engine
   *  itself runs on integers; ClipperD multiplies each component by its
   *  scale factor (default ~128) and rounds to ClipperPoint64 before
   *  feeding the engine, so |x × scale| and |y × scale| must fit
   *  ClipperPoint64's range. Outputs are divided back and quantised to
   *  the scaling grid. */
  typedef struct ClipperPointD
  {
    double x;
    double y;
  } ClipperPointD;
  /** Coordinate pair in the engine's native integer (i64) space. Each
   *  component must satisfy |c| ≤ INT64_MAX/4 (~2.3 × 10¹⁸); values
   *  outside this range produce a range error during a clipping
   *  operation. */
  typedef struct ClipperPoint64
  {
    int64_t x;
    int64_t y;
  } ClipperPoint64;
  /** Determines which subregions are 'inside' when paths self-intersect
   *  or overlap. EVEN_ODD toggles inside/outside on every edge crossing.
   *  NON_ZERO uses the winding-number sign — the conventional rule for
   *  polygons-with-holes data where holes wind opposite to their outer
   *  contour. POSITIVE and NEGATIVE only count windings of the matching
   *  sign, useful when direction has been baked into the input. */
  typedef enum ClipperFillRule
  {
    EVEN_ODD,
    NON_ZERO,
    POSITIVE,
    NEGATIVE
  } ClipperFillRule;
  typedef enum ClipperClipType
  {
    NONE,
    INTERSECTION,
    UNION,
    DIFFERENCE,
    XOR
  } ClipperClipType;
  /** Subject paths are the input geometry being clipped. Clip paths are
   *  the mask. The clipping engine combines the two sets according to
   *  the chosen ClipperClipType and ClipperFillRule. */
  typedef enum ClipperPathType
  {
    SUBJECT,
    CLIP
  } ClipperPathType;
  typedef enum ClipperJoinType
  {
    SQUARE_JOIN,
    BEVEL_JOIN,
    ROUND_JOIN,
    MITER_JOIN
  } ClipperJoinType;
  /** Open-path endpoint handling for ClipperOffset. POLYGON_END is the
   *  closed-polygon case — no endpoints to inflate. The other variants
   *  decide how the start and end of a polyline are extended: BUTT keeps
   *  the line flat at the original endpoint, SQUARE extends one delta
   *  past it, ROUND adds a half-circle cap, JOINED keeps polylines
   *  connected to neighbouring segments. */
  typedef enum ClipperEndType
  {
    POLYGON_END,
    JOINED_END,
    BUTT_END,
    SQUARE_END,
    ROUND_END
  } ClipperEndType;
  typedef enum ClipperPointInPolygonResult
  {
    IS_ON,
    IS_INSIDE,
    IS_OUTSIDE
  } ClipperPointInPolygonResult;