generated/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClipperClipper64 {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClipperClipperD {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClipperClipperOffset {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClipperPath64 {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClipperPathD {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClipperPaths64 {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClipperPathsD {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClipperPolyTree64 {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClipperPolyTreeD {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq)]
pub struct ClipperPointD {
    pub x: f64,
    pub y: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ClipperPointD"][::std::mem::size_of::<ClipperPointD>() - 16usize];
    ["Alignment of ClipperPointD"][::std::mem::align_of::<ClipperPointD>() - 8usize];
    ["Offset of field: ClipperPointD::x"][::std::mem::offset_of!(ClipperPointD, x) - 0usize];
    ["Offset of field: ClipperPointD::y"][::std::mem::offset_of!(ClipperPointD, y) - 8usize];
};
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, Hash, PartialEq, Eq)]
#[cfg_attr(
	feature = "serde",
	derive(serde::Serialize, serde::Deserialize)
)]
pub struct ClipperPoint64 {
    pub x: i64,
    pub y: i64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ClipperPoint64"][::std::mem::size_of::<ClipperPoint64>() - 16usize];
    ["Alignment of ClipperPoint64"][::std::mem::align_of::<ClipperPoint64>() - 8usize];
    ["Offset of field: ClipperPoint64::x"][::std::mem::offset_of!(ClipperPoint64, x) - 0usize];
    ["Offset of field: ClipperPoint64::y"][::std::mem::offset_of!(ClipperPoint64, y) - 8usize];
};
pub const ClipperFillRule_EVEN_ODD: ClipperFillRule = 0;
pub const ClipperFillRule_NON_ZERO: ClipperFillRule = 1;
pub const ClipperFillRule_POSITIVE: ClipperFillRule = 2;
pub const ClipperFillRule_NEGATIVE: ClipperFillRule = 3;
pub type ClipperFillRule = ::std::os::raw::c_uint;
pub const ClipperClipType_NONE: ClipperClipType = 0;
pub const ClipperClipType_INTERSECTION: ClipperClipType = 1;
pub const ClipperClipType_UNION: ClipperClipType = 2;
pub const ClipperClipType_DIFFERENCE: ClipperClipType = 3;
pub const ClipperClipType_XOR: ClipperClipType = 4;
pub type ClipperClipType = ::std::os::raw::c_uint;
pub const ClipperPathType_SUBJECT: ClipperPathType = 0;
pub const ClipperPathType_CLIP: ClipperPathType = 1;
pub type ClipperPathType = ::std::os::raw::c_uint;
pub const ClipperJoinType_SQUARE_JOIN: ClipperJoinType = 0;
pub const ClipperJoinType_BEVEL_JOIN: ClipperJoinType = 1;
pub const ClipperJoinType_ROUND_JOIN: ClipperJoinType = 2;
pub const ClipperJoinType_MITER_JOIN: ClipperJoinType = 3;
pub type ClipperJoinType = ::std::os::raw::c_uint;
pub const ClipperEndType_POLYGON_END: ClipperEndType = 0;
pub const ClipperEndType_JOINED_END: ClipperEndType = 1;
pub const ClipperEndType_BUTT_END: ClipperEndType = 2;
pub const ClipperEndType_SQUARE_END: ClipperEndType = 3;
pub const ClipperEndType_ROUND_END: ClipperEndType = 4;
pub type ClipperEndType = ::std::os::raw::c_uint;
pub const ClipperPointInPolygonResult_IS_ON: ClipperPointInPolygonResult = 0;
pub const ClipperPointInPolygonResult_IS_INSIDE: ClipperPointInPolygonResult = 1;
pub const ClipperPointInPolygonResult_IS_OUTSIDE: ClipperPointInPolygonResult = 2;
pub type ClipperPointInPolygonResult = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn clipper_paths64_inflate(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut ClipperPaths64,
        delta: f64,
        jt: ClipperJoinType,
        et: ClipperEndType,
        miter_limit: f64,
    ) -> *mut ClipperPaths64;
}
unsafe extern "C" {
    pub fn clipper_pathsd_inflate(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut ClipperPathsD,
        delta: f64,
        jt: ClipperJoinType,
        et: ClipperEndType,
        miter_limit: f64,
        precision: ::std::os::raw::c_int,
    ) -> *mut ClipperPathsD;
}
unsafe extern "C" {
    pub fn clipper_path64(mem: *mut ::std::os::raw::c_void) -> *mut ClipperPath64;
}
unsafe extern "C" {
    pub fn clipper_pathd(mem: *mut ::std::os::raw::c_void) -> *mut ClipperPathD;
}
unsafe extern "C" {
    pub fn clipper_path64_of_points(
        mem: *mut ::std::os::raw::c_void,
        pts: *mut ClipperPoint64,
        len_pts: usize,
    ) -> *mut ClipperPath64;
}
unsafe extern "C" {
    pub fn clipper_pathd_of_points(
        mem: *mut ::std::os::raw::c_void,
        pts: *mut ClipperPointD,
        len_pts: usize,
    ) -> *mut ClipperPathD;
}
unsafe extern "C" {
    pub fn clipper_path64_add_point(path: *mut ClipperPath64, pt: ClipperPoint64);
}
unsafe extern "C" {
    pub fn clipper_pathd_add_point(path: *mut ClipperPathD, pt: ClipperPointD);
}
unsafe extern "C" {
    pub fn clipper_paths64(mem: *mut ::std::os::raw::c_void) -> *mut ClipperPaths64;
}
unsafe extern "C" {
    pub fn clipper_pathsd(mem: *mut ::std::os::raw::c_void) -> *mut ClipperPathsD;
}
unsafe extern "C" {
    pub fn clipper_paths64_of_paths(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut *mut ClipperPath64,
        len_paths: usize,
    ) -> *mut ClipperPaths64;
}
unsafe extern "C" {
    pub fn clipper_pathsd_of_paths(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut *mut ClipperPathD,
        len_paths: usize,
    ) -> *mut ClipperPathsD;
}
unsafe extern "C" {
    pub fn clipper_paths64_add_path(paths: *mut ClipperPaths64, p: *mut ClipperPath64);
}
unsafe extern "C" {
    pub fn clipper_pathsd_add_path(paths: *mut ClipperPathsD, p: *mut ClipperPathD);
}
unsafe extern "C" {
    pub fn clipper_paths64_add_paths(a: *mut ClipperPaths64, b: *mut ClipperPaths64);
}
unsafe extern "C" {
    pub fn clipper_pathsd_add_paths(a: *mut ClipperPathsD, b: *mut ClipperPathsD);
}
unsafe extern "C" {
    pub fn clipper_path64_length(path: *mut ClipperPath64) -> usize;
}
unsafe extern "C" {
    pub fn clipper_pathd_length(path: *mut ClipperPathD) -> usize;
}
unsafe extern "C" {
    pub fn clipper_path64_get_point(
        path: *mut ClipperPath64,
        idx: ::std::os::raw::c_int,
    ) -> ClipperPoint64;
}
unsafe extern "C" {
    pub fn clipper_pathd_get_point(
        path: *mut ClipperPathD,
        idx: ::std::os::raw::c_int,
    ) -> ClipperPointD;
}
unsafe extern "C" {
    pub fn clipper_paths64_length(paths: *mut ClipperPaths64) -> usize;
}
unsafe extern "C" {
    pub fn clipper_pathsd_length(paths: *mut ClipperPathsD) -> usize;
}
unsafe extern "C" {
    pub fn clipper_paths64_path_length(
        paths: *mut ClipperPaths64,
        idx: ::std::os::raw::c_int,
    ) -> usize;
}
unsafe extern "C" {
    pub fn clipper_pathsd_path_length(
        paths: *mut ClipperPathsD,
        idx: ::std::os::raw::c_int,
    ) -> usize;
}
unsafe extern "C" {
    pub fn clipper_paths64_get_path(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut ClipperPaths64,
        idx: ::std::os::raw::c_int,
    ) -> *mut ClipperPath64;
}
unsafe extern "C" {
    pub fn clipper_pathsd_get_path(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut ClipperPathsD,
        idx: ::std::os::raw::c_int,
    ) -> *mut ClipperPathD;
}
unsafe extern "C" {
    pub fn clipper_paths64_get_point(
        paths: *mut ClipperPaths64,
        path_idx: ::std::os::raw::c_int,
        point_idx: ::std::os::raw::c_int,
    ) -> ClipperPoint64;
}
unsafe extern "C" {
    pub fn clipper_pathsd_get_point(
        paths: *mut ClipperPathsD,
        path_idx: ::std::os::raw::c_int,
        point_idx: ::std::os::raw::c_int,
    ) -> ClipperPointD;
}
unsafe extern "C" {
    pub fn clipper_path64_simplify(
        mem: *mut ::std::os::raw::c_void,
        path: *mut ClipperPath64,
        epsilon: f64,
        is_open_path: ::std::os::raw::c_int,
    ) -> *mut ClipperPath64;
}
unsafe extern "C" {
    pub fn clipper_pathd_simplify(
        mem: *mut ::std::os::raw::c_void,
        path: *mut ClipperPathD,
        epsilon: f64,
        is_open_path: ::std::os::raw::c_int,
    ) -> *mut ClipperPathD;
}
unsafe extern "C" {
    pub fn clipper_paths64_simplify(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut ClipperPaths64,
        epsilon: f64,
        is_open_paths: ::std::os::raw::c_int,
    ) -> *mut ClipperPaths64;
}
unsafe extern "C" {
    pub fn clipper_pathsd_simplify(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut ClipperPathsD,
        epsilon: f64,
        is_open_paths: ::std::os::raw::c_int,
    ) -> *mut ClipperPathsD;
}
unsafe extern "C" {
    pub fn clipper_path64_to_pathd(
        mem: *mut ::std::os::raw::c_void,
        path: *mut ClipperPath64,
    ) -> *mut ClipperPathD;
}
unsafe extern "C" {
    pub fn clipper_pathd_to_path64(
        mem: *mut ::std::os::raw::c_void,
        path: *mut ClipperPathD,
    ) -> *mut ClipperPath64;
}
unsafe extern "C" {
    pub fn clipper_paths64_to_pathsd(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut ClipperPaths64,
    ) -> *mut ClipperPathsD;
}
unsafe extern "C" {
    pub fn clipper_pathsd_to_paths64(
        mem: *mut ::std::os::raw::c_void,
        paths: *mut ClipperPathsD,
    ) -> *mut ClipperPaths64;
}
unsafe extern "C" {
    pub fn clipper_pathd_area(path: *mut ClipperPathD) -> f64;
}
unsafe extern "C" {
    pub fn clipper_path64_area(path: *mut ClipperPath64) -> f64;
}
unsafe extern "C" {
    pub fn clipper_pathsd_area(paths: *mut ClipperPathsD) -> f64;
}
unsafe extern "C" {
    pub fn clipper_paths64_area(paths: *mut ClipperPaths64) -> f64;
}
unsafe extern "C" {
    pub fn clipper_point_in_path64(
        path: *mut ClipperPath64,
        pt: ClipperPoint64,
    ) -> ClipperPointInPolygonResult;
}
unsafe extern "C" {
    pub fn clipper_point_in_pathd(
        path: *mut ClipperPathD,
        pt: ClipperPointD,
    ) -> ClipperPointInPolygonResult;
}
unsafe extern "C" {
    pub fn clipper_polytree64(
        mem: *mut ::std::os::raw::c_void,
        parent: *mut ClipperPolyTree64,
    ) -> *mut ClipperPolyTree64;
}
unsafe extern "C" {
    pub fn clipper_polytreed(
        mem: *mut ::std::os::raw::c_void,
        parent: *mut ClipperPolyTreeD,
    ) -> *mut ClipperPolyTreeD;
}
unsafe extern "C" {
    pub fn clipper_polytree64_parent(pt: *mut ClipperPolyTree64) -> *const ClipperPolyTree64;
}
unsafe extern "C" {
    pub fn clipper_polytree64_get_child(
        pt: *mut ClipperPolyTree64,
        idx: usize,
    ) -> *const ClipperPolyTree64;
}
unsafe extern "C" {
    pub fn clipper_polytree64_add_child(
        pt: *mut ClipperPolyTree64,
        path: *mut ClipperPath64,
    ) -> *mut ClipperPolyTree64;
}
unsafe extern "C" {
    pub fn clipper_polytree64_count(pt: *mut ClipperPolyTree64) -> usize;
}
unsafe extern "C" {
    pub fn clipper_polytree64_is_hole(pt: *mut ClipperPolyTree64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn clipper_polytree64_polygon(
        mem: *mut ::std::os::raw::c_void,
        pt: *mut ClipperPolyTree64,
    ) -> *mut ClipperPath64;
}
unsafe extern "C" {
    pub fn clipper_polytree64_area(pt: *mut ClipperPolyTree64) -> f64;
}
unsafe extern "C" {
    pub fn clipper_polytree64_to_paths(
        mem: *mut ::std::os::raw::c_void,
        pt: *mut ClipperPolyTree64,
    ) -> *mut ClipperPaths64;
}
unsafe extern "C" {
    pub fn clipper_polytreed_parent(pt: *mut ClipperPolyTreeD) -> *const ClipperPolyTreeD;
}
unsafe extern "C" {
    pub fn clipper_polytreed_get_child(
        pt: *mut ClipperPolyTreeD,
        idx: usize,
    ) -> *const ClipperPolyTreeD;
}
